lib/bait/tests/inout_error/is_private.in.bt
import bait.tests.packages.foo

s := foo.PrivStruct{}

e := foo.PrivEnum.a

c := foo.PRIV_CONST

foo.priv_fun()
